[gd_scene load_steps=5 format=3 uid="uid://dc6ej178136ob"]

[ext_resource type="Script" path="res://scripts/spikeball_trap.gd" id="1_p1nsq"]
[ext_resource type="Script" path="res://scripts/trap.gd" id="1_s73d5"]
[ext_resource type="Texture2D" uid="uid://bn7rbdjg7fg6d" path="res://assets/textures/other/Spiked Ball.png" id="2_v1sya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hs7xx"]
radius = 10.198

[node name="SpikeBall" type="Node2D"]
script = ExtResource("1_p1nsq")
duration = 2.0

[node name="Area2D" type="Area2D" parent="." groups=["traps"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_s73d5")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("2_v1sya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hs7xx")

[node name="PathLine" type="Line2D" parent="."]
z_index = -1
points = PackedVector2Array(0, 0)
width = 2.0
default_color = Color(1, 1, 1, 0.3)

[node name="Positions" type="Node2D" parent="."]

[node name="StartPosition" type="Marker2D" parent="Positions"]

[node name="EndPosition" type="Marker2D" parent="Positions"]
position = Vector2(100, 0)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
